--- a/package.json
+++ b/package.json
@@ -10,16 +10,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^6.9.0",
-    "mongoose-paginate-v2": "^1.7.1",
-    "socket.io": "^4.5.4"
-  }
+  "license": "ISC"
 }
